# Nexa-MVP

./: .gitignore  .python-version  .renderignore  DEPLOYMENT.md  Dockerfile  INSTRUCCIONES_COMPLETAS.md  Procfile  README.md  README_NEW_STRUCTURE.md  app.json  app.py  build.sh  config.py  docker-compose.yml  env.example  env.local  env_example  gunicorn.conf.py  main.py  package-lock.json  package.json  pyproject.toml  render-simple.yaml  render.config  render.yaml  requirements-minimal.txt  requirements-render.txt  requirements.txt  runtime.txt  setup.py  setup_venv.bat  setup_venv.sh  start.bat  start.py  start.sh  tsconfig.json  utils.py  wsgi.py
apps/api/: package.json
apps/api/src/: index.ts  seed.ts
apps/web/: next.config.js  package.json  tailwind.config.js
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/cliente/: page.tsx
apps/web/app/ejecutivo/: page.tsx
apps/worker/: package.json  tsconfig.json
apps/worker/src/: index.ts
backend/: app.py  config.py  env_example  requirements.txt
frontend/: .npmrc  env.production  package-lock.json  package.json
frontend/public/: config.js  index.html  manifest.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Chatbot.tsx  Layout.tsx
frontend/src/config/: api.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Calendar.tsx  Dashboard.tsx  Employees.tsx  ExecutiveMetrics.tsx  Login.tsx  Payments.tsx  Projects.tsx  Stock.tsx  WorkRoute.tsx
prisma/: schema.prisma
static/: index.html
tests/: __init__.py  test_app.py
